--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/SamMaxwell/gap-assignment/issues"
   },
-  "homepage": "https://github.com/SamMaxwell/gap-assignment#readme"
+  "homepage": "https://github.com/SamMaxwell/gap-assignment#readme",
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "rewire": "^5.0.0"
+  }
 }
